--- a/clashN/clashN/Views/SettingsView.xaml
+++ b/clashN/clashN/Views/SettingsView.xaml
@@ -13,57 +13,44 @@
     d:DesignWidth="800"
     x:TypeArguments="vms:SettingsViewModel"
     mc:Ignorable="d">
-    <ScrollViewer
-        materialDesign:ScrollViewerAssist.IsAutoHideEnabled="True"
-        HorizontalScrollBarVisibility="Auto"
-        VerticalScrollBarVisibility="Auto">
+    <DockPanel Grid.Row="0" Margin="16">
+        <TextBlock
+            Margin="8,0,8,8"
+            DockPanel.Dock="Top"
+            Style="{StaticResource ModuleTitle}"
+            Text="{x:Static resx:ResUI.TbSettings}" />
+        <ToolBarTray Margin="0,8,0,8" DockPanel.Dock="Top">
+            <ToolBar ClipToBounds="True" Style="{StaticResource MaterialDesignToolBar}">
+                <Button x:Name="btnSave">
+                    <StackPanel Orientation="Horizontal">
+                        <materialDesign:PackIcon Kind="ContentSave" />
+                        <TextBlock Style="{StaticResource ToolbarItem}" Text="{x:Static resx:ResUI.TbSave}" />
+                    </StackPanel>
+                </Button>
+                <Separator />
+                <TextBlock
+                    VerticalAlignment="Center"
+                    Style="{StaticResource ToolbarItem}"
+                    Text="{x:Static resx:ResUI.TbSettingsColorMode}" />
+                <ToggleButton x:Name="togDarkMode" />
+                <ComboBox
+                    x:Name="cmbSwatches"
+                    Width="100"
+                    DisplayMemberPath="Name" />
+                <Separator />
+                <TextBlock
+                    VerticalAlignment="Center"
+                    Style="{StaticResource ToolbarItem}"
+                    Text="{x:Static resx:ResUI.TbSettingsLanguage}" />
+                <ComboBox
+                    x:Name="cmbCurrentLanguage"
+                    Width="100"
+                    materialDesign:HintAssist.Hint="Language" />
 
-        <Grid Margin="16">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-            </Grid.RowDefinitions>
-
-            <TextBlock
-                Grid.Row="0"
-                Grid.Column="0"
-                Margin="8,0,8,8"
-                Style="{StaticResource ModuleTitle}"
-                Text="{x:Static resx:ResUI.TbSettings}" />
-
-            <ToolBarTray Grid.Row="1" Margin="0,8,0,8">
-                <ToolBar ClipToBounds="True" Style="{StaticResource MaterialDesignToolBar}">
-                    <Button x:Name="btnSave">
-                        <StackPanel Orientation="Horizontal">
-                            <materialDesign:PackIcon Kind="ContentSave" />
-                            <TextBlock Style="{StaticResource ToolbarItem}" Text="{x:Static resx:ResUI.TbSave}" />
-                        </StackPanel>
-                    </Button>
-                    <Separator />
-                    <TextBlock
-                        VerticalAlignment="Center"
-                        Style="{StaticResource ToolbarItem}"
-                        Text="{x:Static resx:ResUI.TbSettingsColorMode}" />
-                    <ToggleButton x:Name="togDarkMode" />
-                    <ComboBox
-                        x:Name="cmbSwatches"
-                        Width="100"
-                        DisplayMemberPath="Name" />
-                    <Separator />
-                    <TextBlock
-                        VerticalAlignment="Center"
-                        Style="{StaticResource ToolbarItem}"
-                        Text="{x:Static resx:ResUI.TbSettingsLanguage}" />
-                    <ComboBox
-                        x:Name="cmbCurrentLanguage"
-                        Width="100"
-                        materialDesign:HintAssist.Hint="Language" />
-
-                </ToolBar>
-            </ToolBarTray>
-            <TabControl Grid.Row="2">
+            </ToolBar>
+        </ToolBarTray>
+        <ScrollViewer VerticalScrollBarVisibility="Auto">
+            <TabControl>
                 <TabItem Header="{x:Static resx:ResUI.TbSettingsCore}">
                     <Grid Grid.Row="1" Margin="16">
                         <Grid.RowDefinitions>
@@ -402,10 +389,6 @@
 
                 </TabItem>
             </TabControl>
-
-        </Grid>
-
-
-
-    </ScrollViewer>
+        </ScrollViewer>
+    </DockPanel>
 </reactiveui:ReactiveUserControl>
