--- a/clashN/clashN/App.xaml
+++ b/clashN/clashN/App.xaml
@@ -89,6 +89,12 @@
                 TargetType="{x:Type ContextMenu}">
                 <Setter Property="FontSize" Value="12" />
             </Style>
+            <Style
+                x:Key="DefComboBox"
+                BasedOn="{StaticResource MaterialDesignComboBox}"
+                TargetType="{x:Type ComboBox}">
+                <Setter Property="FontSize" Value="10" />
+            </Style>
         </ResourceDictionary>
 
     </Application.Resources>
