--- a/clashN/clashN/Views/SettingsView.xaml
+++ b/clashN/clashN/Views/SettingsView.xaml
@@ -13,7 +13,7 @@
     d:DesignWidth="800"
     x:TypeArguments="vms:SettingsViewModel"
     mc:Ignorable="d">
-    <DockPanel Grid.Row="0" Margin="16">
+    <DockPanel Margin="8">
         <TextBlock
             Margin="8,0,8,8"
             DockPanel.Dock="Top"
@@ -56,7 +56,7 @@
         <ScrollViewer VerticalScrollBarVisibility="Auto">
             <TabControl>
                 <TabItem Header="{x:Static resx:ResUI.TbSettingsCore}">
-                    <Grid Grid.Row="1" Margin="16">
+                    <Grid Grid.Row="1" Margin="8">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="Auto" />
                             <RowDefinition Height="Auto" />
@@ -203,7 +203,7 @@
                 </TabItem>
 
                 <TabItem Header="{x:Static resx:ResUI.TbSettingsClashN}">
-                    <Grid Grid.Row="2" Margin="16">
+                    <Grid Grid.Row="2" Margin="8">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="Auto" />
                             <RowDefinition Height="Auto" />
@@ -334,7 +334,7 @@
                 </TabItem>
 
                 <TabItem Header="{x:Static resx:ResUI.TbSettingsSystemproxy}">
-                    <Grid Grid.Row="3" Margin="16">
+                    <Grid Grid.Row="3" Margin="8">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="Auto" />
                             <RowDefinition Height="Auto" />
