--- a/clashN/clashN/Views/ProfilesView.xaml
+++ b/clashN/clashN/Views/ProfilesView.xaml
@@ -97,10 +97,7 @@
             </ListView.ItemsPanel>
             <ListView.ItemTemplate>
                 <DataTemplate>
-                    <materialDesign:Card
-                        Width="280"
-                        Padding="0"
-                        materialDesign:UniformCornerRadius="8">
+                    <Border Width="280" Padding="0">
                         <DockPanel>
                             <Border
                                 Width="5"
@@ -127,7 +124,7 @@
 
                                 <StackPanel
                                     Grid.Row="2"
-                                    Margin="8,0,8,0"
+                                    Margin="4,0"
                                     HorizontalAlignment="Left"
                                     Orientation="Horizontal">
                                     <CheckBox
@@ -188,7 +185,7 @@
                                 </StackPanel>
                             </Grid>
                         </DockPanel>
-                    </materialDesign:Card>
+                    </Border>
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
